--- a/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
+++ b/data/blog/introducing-tailwind-nextjs-starter-blog.mdx
@@ -1,197 +1,95 @@
 ---
-title: 'Introducing Tailwind Nextjs Starter Blog'
+title: 'Tailwind Next.js スターターブログの紹介'
 date: '2021-01-12'
 lastmod: '2024-08-16'
-tags: ['next-js', 'tailwind', 'guide']
+tags: ['next-js', 'tailwind', 'ガイド']
 draft: false
-summary: 'Looking for a performant, out of the box template, with all the best in web technology to support your blogging needs? Checkout the Tailwind Nextjs Starter Blog template.'
+summary: '高性能で、最新のウェブ技術を活用したブログテンプレートをお探しですか？Tailwind Next.js スターターブログテンプレートをチェックしてみてください。'
 images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
 authors: ['default', 'sparrowhawk']
 ---
 
 ![tailwind-nextjs-banner](/static/images/twitter-card.png)
 
-# Tailwind Nextjs Starter Blog
+# Tailwind Next.js スターターブログ
 
-[![Deploy with Vercel](https://vercel.com/button)](https://vercel.com/new/git/external?repository-url=https://github.com/timlrx/tailwind-nextjs-starter-blog)
+[![Vercelでデプロイ](https://vercel.com/button)](https://vercel.com/new/git/external?repository-url=https://github.com/timlrx/tailwind-nextjs-starter-blog)
 
-> [!CAUTION]
-> This is the README of version 1 of the template. It is kept for historical reasons, but is no longer supported. It also serves as a nice example of [Github Alert](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#alerts). For the actual documentation, please refer to the [Github repository](https://github.com/timlrx/tailwind-nextjs-starter-blog).
+> [!注意]
+> これはテンプレートのバージョン1のREADMEです。歴史的な理由で保持されていますが、サポートは終了しています。また、[GitHubのアラート](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#alerts)の良い例としても使用されています。最新のドキュメントについては、[GitHubリポジトリ](https://github.com/timlrx/tailwind-nextjs-starter-blog)をご参照ください。
 
-This is a [Next.js](https://nextjs.org/), [Tailwind CSS](https://tailwindcss.com/) blogging starter template. Probably the most feature-rich Next.js markdown blogging template out there. Comes out of the box configured with the latest technologies to make technical writing a breeze. Easily configurable and customizable. Perfect as a replacement to existing Jekyll and Hugo individual blogs.
+これは[Next.js](https://nextjs.org/)と[Tailwind CSS](https://tailwindcss.com/)をベースにしたブログスターターテンプレートです。おそらく最も機能豊富なNext.js Markdownブログテンプレートです。技術的な文章作成を簡単にするための最新技術があらかじめ設定されており、カスタマイズも簡単。既存のJekyllやHugo個人ブログの置き換えに最適です。
 
-Check out the documentation below to get started.
+以下のドキュメントをチェックして始めてみましょう。
 
-Facing issues? Check the [FAQ page](https://github.com/timlrx/tailwind-nextjs-starter-blog/wiki) and do a search on past issues. Feel free to open a new issue if none has been posted previously.
+問題が発生しましたか？[FAQページ](https://github.com/timlrx/tailwind-nextjs-starter-blog/wiki)を確認し、過去の問題を検索してください。投稿されていない場合は、新しい問題を開いてください。
 
-Feature request? Check the past discussions to see if it has been brought up previously. Otherwise, feel free to start a new discussion thread. All ideas are welcomed!
+機能のリクエストがありますか？過去のディスカッションを確認し、すでに提案されていない場合は、新しいディスカッションスレッドを開始してください。どのようなアイデアも歓迎します！
 
-## Examples
+## サンプルブログ
 
-- [Demo Blog](https://tailwind-nextjs-starter-blog.vercel.app/) - this repo
-- [My personal blog](https://www.timlrx.com) - modified to auto-generate blog posts with dates
-- [Aloisdg's cookbook](https://tambouille.vercel.app/) - with pictures and recipes!
-- [GautierArcin's demo with next translate](https://tailwind-nextjs-starter-blog-seven.vercel.app/) - includes translation of mdx posts, [source code](https://github.com/GautierArcin/tailwind-nextjs-starter-blog/tree/demo/next-translate)
-- [David Levai's digital garden](https://davidlevai.com/) - customized design and added email subscriptions
-- [Thinh's Corner](https://thinhcorner.com/) - [customized layout](https://github.com/Th1nhNg0/th1nhng0.vercel.app/blob/5e73a420828d82f01e7147512a2c3273c4ec19f8/layouts/PostLayout.js) with sticky side table of contents
+- [デモブログ](https://tailwind-nextjs-starter-blog.vercel.app/) - このリポジトリ
+- [個人ブログ](https://www.timlrx.com) - 自動で日付を生成するブログ投稿
+- [Aloisdgのクックブック](https://tambouille.vercel.app/) - 写真とレシピを含む！
+- [GautierArcinの翻訳デモ](https://tailwind-nextjs-starter-blog-seven.vercel.app/) - Mdx投稿の翻訳を含む、[ソースコード](https://github.com/GautierArcin/tailwind-nextjs-starter-blog/tree/demo/next-translate)
+- [David Levaiのデジタルガーデン](https://davidlevai.com/) - メール購読を追加したカスタムデザイン
+- [Thinhのコーナー](https://thinhcorner.com/) - [カスタムレイアウト](https://github.com/Th1nhNg0/th1nhng0.vercel.app/blob/5e73a420828d82f01e7147512a2c3273c4ec19f8/layouts/PostLayout.js) でサイドメニューを固定
 
-Using the template? Feel free to create a PR and add your blog to this list.
+テンプレートを使用していますか？PRを作成して、あなたのブログをこのリストに追加してください。
 
-## Motivation
+## 動機
 
-I wanted to port my existing blog to Nextjs and Tailwind CSS but there was no easy out of the box template to use so I decided to create one. Design is adapted from [Tailwindlabs blog](https://github.com/tailwindlabs/blog.tailwindcss.com).
+既存のブログをNext.jsとTailwind CSSに移行したかったのですが、使いやすいテンプレートがありませんでした。そのため、自分で作ることにしました。このデザインは[Tailwindlabsブログ](https://github.com/tailwindlabs/blog.tailwindcss.com)に基づいています。
 
-I wanted it to be nearly as feature-rich as popular blogging templates like [beautiful-jekyll](https://github.com/daattali/beautiful-jekyll) and [Hugo Academic](https://github.com/wowchemy/wowchemy-hugo-modules) but with the best of React's ecosystem and current web development's best practices.
+JekyllやHugo Academicなどの人気ブログテンプレートに匹敵するほど機能豊富でありながら、Reactエコシステムや現在のウェブ開発のベストプラクティスを活用したものを目指しました。
 
-## Features
+## 機能
 
-- Easy styling customization with [Tailwind 3.0](https://tailwindcss.com/blog/tailwindcss-v3) and primary color attribute
-- Near perfect lighthouse score - [Lighthouse report](https://www.webpagetest.org/result/210111_DiC1_08f3670c3430bf4a9b76fc3b927716c5/)
-- Lightweight, 45kB first load JS, uses Preact in production build
-- Mobile-friendly view
-- Light and dark theme
-- Self-hosted font with [Fontsource](https://fontsource.org/)
-- Supports [plausible](https://plausible.io/), [simple analytics](https://simpleanalytics.com/) and google analytics
-- [MDX - write JSX in markdown documents!](https://mdxjs.com/)
-- Server-side syntax highlighting with line numbers and line highlighting via [rehype-prism-plus](https://github.com/timlrx/rehype-prism-plus)
-- Math display supported via [KaTeX](https://katex.org/)
-- Citation and bibliography support via [rehype-citation](https://github.com/timlrx/rehype-citation)
-- Automatic image optimization via [next/image](https://nextjs.org/docs/basic-features/image-optimization)
-- Flexible data retrieval with [mdx-bundler](https://github.com/kentcdodds/mdx-bundler)
-- Support for tags - each unique tag will be its own page
-- Support for multiple authors
-- Blog templates
-- TOC component
-- Support for nested routing of blog posts
-- Newsletter component with support for Mailchimp, Buttondown, Convertkit, Klaviyo, Revue, Emailoctopus and Beehiiv
-- Supports [giscus](https://github.com/laymonage/giscus), [utterances](https://github.com/utterance/utterances) or disqus
-- Projects page
-- Preconfigured security headers
-- SEO friendly with RSS feed, sitemaps and more!
+- [Tailwind 3.0](https://tailwindcss.com/blog/tailwindcss-v3)とプライマリカラー属性による簡単なスタイリングカスタマイズ
+- ほぼ完璧なLighthouseスコア - [Lighthouseレポート](https://www.webpagetest.org/result/210111_DiC1_08f3670c3430bf4a9b76fc3b927716c5/)
+- 軽量な初回ロードJS (45kB)、本番ビルドでPreactを使用
+- モバイルフレンドリー
+- ライトテーマとダークテーマ
+- [Fontsource](https://fontsource.org/)を使用したセルフホストフォント
+- [plausible](https://plausible.io/)、[simple analytics](https://simpleanalytics.com/)、Google Analytics対応
+- [MDX](https://mdxjs.com/) - MarkdownドキュメントでJSXを記述可能！
+- 行番号付きサーバーサイドシンタックスハイライト
+- [KaTeX](https://katex.org/)による数学表示
+- [rehype-citation](https://github.com/timlrx/rehype-citation)による引用と参考文献のサポート
+- [next/image](https://nextjs.org/docs/basic-features/image-optimization)を使用した自動画像最適化
+- 柔軟なデータ取得（[mdx-bundler](https://github.com/kentcdodds/mdx-bundler)を使用）
+- タグサポート - 各ユニークなタグは専用ページが生成されます
+- 複数の著者のサポート
+- ブログテンプレート
+- TOCコンポーネント
+- ネストルーティングサポート
+- Mailchimp、Buttondown、Convertkitなどのメール購読コンポーネント
 
-## Sample posts
+## サンプル投稿
 
-- [A markdown guide](https://tailwind-nextjs-starter-blog.vercel.app/blog/github-markdown-guide)
-- [Learn more about images in Next.js](https://tailwind-nextjs-starter-blog.vercel.app/blog/guide-to-using-images-in-nextjs)
-- [A tour of math typesetting](https://tailwind-nextjs-starter-blog.vercel.app/blog/deriving-ols-estimator)
-- [Simple MDX image grid](https://tailwind-nextjs-starter-blog.vercel.app/blog/pictures-of-canada)
-- [Example of long prose](https://tailwind-nextjs-starter-blog.vercel.app/blog/the-time-machine)
-- [Example of Nested Route Post](https://tailwind-nextjs-starter-blog.vercel.app/blog/nested-route/introducing-multi-part-posts-with-nested-routing)
+- [Markdownガイド](https://tailwind-nextjs-starter-blog.vercel.app/blog/github-markdown-guide)
+- [Next.jsでの画像利用](https://tailwind-nextjs-starter-blog.vercel.app/blog/guide-to-using-images-in-nextjs)
+- [数学記法ツアー](https://tailwind-nextjs-starter-blog.vercel.app/blog/deriving-ols-estimator)
+- [シンプルなMDX画像グリッド](https://tailwind-nextjs-starter-blog.vercel.app/blog/pictures-of-canada)
+- [長文の例](https://tailwind-nextjs-starter-blog.vercel.app/blog/the-time-machine)
+- [ネストルートの投稿例](https://tailwind-nextjs-starter-blog.vercel.app/blog/nested-route/introducing-multi-part-posts-with-nested-routing)
 
-## Quick Start Guide
+## クイックスタートガイド
 
-1. JS (official support) - `npx degit https://github.com/timlrx/tailwind-nextjs-starter-blog.git` or TS (community support) - `npx degit timlrx/tailwind-nextjs-starter-blog#typescript`
-2. Personalize `siteMetadata.js` (site related information)
-3. Modify the content security policy in `next.config.js` if you want to use
-   any analytics provider or a commenting solution other than giscus.
-4. Personalize `authors/default.md` (main author)
-5. Modify `projectsData.ts`
-6. Modify `headerNavLinks.ts` to customize navigation links
-7. Add blog posts
-8. Deploy on Vercel
+1. JS版 - `npx degit https://github.com/timlrx/tailwind-nextjs-starter-blog.git`  
+   または TS版 - `npx degit timlrx/tailwind-nextjs-starter-blog#typescript`
+2. `siteMetadata.js` を編集
+3. `next.config.js` のセキュリティポリシーを変更
+4. 著者情報をカスタマイズ
+5. ブログ投稿を追加
+6. Vercelでデプロイ
 
-## Development
+## 開発
 
-First, run the development server:
+以下で開発サーバーを起動：
 
 ```bash
 npm start
-# or
+# または
 npm run dev
 ```
-
-Open [http://localhost:3000](http://localhost:3000) with your browser to see the result.
-
-You can start editing the page by modifying `pages/index.js`. The page auto-updates as you edit the file.
-
-## Extend / Customize
-
-`data/siteMetadata.js` - contains most of the site related information which should be modified for a user's need.
-
-`data/authors/default.md` - default author information (required). Additional authors can be added as files in `data/authors`.
-
-`data/projectsData.js` - data used to generate styled card on the projects page.
-
-`data/headerNavLinks.js` - navigation links.
-
-`data/logo.svg` - replace with your own logo.
-
-`data/blog` - replace with your own blog posts.
-
-`public/static` - store assets such as images and favicons.
-
-`tailwind.config.js` and `css/tailwind.css` - contain the tailwind stylesheet which can be modified to change the overall look and feel of the site.
-
-`css/prism.css` - controls the styles associated with the code blocks. Feel free to customize it and use your preferred prismjs theme e.g. [prism themes](https://github.com/PrismJS/prism-themes).
-
-`components/social-icons` - to add other icons, simply copy an svg file from [Simple Icons](https://simpleicons.org/) and map them in `index.js`. Other icons use [heroicons](https://heroicons.com/).
-
-`components/MDXComponents.js` - pass your own JSX code or React component by specifying it over here. You can then call them directly in the `.mdx` or `.md` file. By default, a custom link and image component is passed.
-
-`layouts` - main templates used in pages.
-
-`pages` - pages to route to. Read the [Next.js documentation](https://nextjs.org/docs) for more information.
-
-`next.config.js` - configuration related to Next.js. You need to adapt the Content Security Policy if you want to load scripts, images etc. from other domains.
-
-## Post
-
-### Frontmatter
-
-Frontmatter follows [Hugo's standards](https://gohugo.io/content-management/front-matter/).
-
-Currently 10 fields are supported.
-
-```
-title (required)
-date (required)
-tags (required, can be empty array)
-lastmod (optional)
-draft (optional)
-summary (optional)
-images (optional, if none provided defaults to socialBanner in siteMetadata config)
-authors (optional list which should correspond to the file names in `data/authors`. Uses `default` if none is specified)
-layout (optional list which should correspond to the file names in `data/layouts`)
-canonicalUrl (optional, canonical url for the post for SEO)
-```
-
-Here's an example of a post's frontmatter:
-
-```
----
-title: 'Introducing Tailwind Nexjs Starter Blog'
-date: '2021-01-12'
-lastmod: '2021-01-18'
-tags: ['next-js', 'tailwind', 'guide']
-draft: false
-summary: 'Looking for a performant, out of the box template, with all the best in web technology to support your blogging needs? Checkout the Tailwind Nextjs Starter Blog template.'
-images: ['/static/images/canada/mountains.jpg', '/static/images/canada/toronto.jpg']
-authors: ['default', 'sparrowhawk']
-layout: PostLayout
-canonicalUrl: https://tailwind-nextjs-starter-blog.vercel.app/blog/introducing-tailwind-nextjs-starter-blog
----
-```
-
-### Compose
-
-Run `node ./scripts/compose.js` to bootstrap a new post.
-
-Follow the interactive prompt to generate a post with pre-filled front matter.
-
-## Deploy
-
-**Vercel**  
-The easiest way to deploy the template is to use the [Vercel Platform](https://vercel.com) from the creators of Next.js. Check out the [Next.js deployment documentation](https://nextjs.org/docs/deployment) for more details.
-
-**Netlify / GitHub Pages / Firebase etc.**  
-As the template uses `next/image` for image optimization, additional configurations have to be made to deploy on other popular static hosting websites like [Netlify](https://www.netlify.com/) or [GitHub Pages](https://pages.github.com/). An alternative image optimization provider such as Imgix, Cloudinary or Akamai has to be used. Alternatively, replace the `next/image` component with a standard `<img>` tag. See [`next/image` documentation](https://nextjs.org/docs/basic-features/image-optimization) for more details.
-
-The API routes used in the newsletter component cannot be used in a static site export. You will need to use a form API endpoint provider and substitute the route in the newsletter component accordingly. Other hosting platforms such as Netlify also offer alternative solutions - please refer to their docs for more information.
-
-## Support
-
-Using the template? Support this effort by giving a star on GitHub, sharing your own blog and giving a shoutout on Twitter or be a project [sponsor](https://github.com/sponsors/timlrx).
-
-## Licence
-
-[MIT](https://github.com/timlrx/tailwind-nextjs-starter-blog/blob/main/LICENSE) © [Timothy Lin](https://www.timrlx.com)
