--- a/data/blog/my-fancy-title.mdx
+++ b/data/blog/my-fancy-title.mdx
@@ -1,10 +1,10 @@
 ---
-title: My fancy title
+title: 私のおしゃれなタイトル
 date: '2021-01-31'
-tags: ['hello']
+tags: ['こんにちは']
 draft: true
-summary: draft post
+summary: 下書き投稿
 images: []
 ---
 
-Draft post which should not display
+表示されるべきではない下書き投稿
